--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -15,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-simple-timestamp-to-date": "^1.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
